--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="carousel-item">
                     <img src="./imagenes/code-1076536_1920.jpg" class="d-block w-100" alt="">
                     <div class="carousel-caption">
-                        <h5 id="proyectos">Proyecto de FullStack en Java</h5>
+                        <h5 id="proyectos">Proyecto FullStack en Java</h5>
                         <p>Para ir al video pulsar el boton</p>
                         <p><a target="_blank" href="https://www.youtube.com/watch?v=c6iuPgJYi10" class="btn btn-primary mt-3">Ver mas</a></p>
                     </div>
@@ -133,7 +133,7 @@
                     <div class="card text-white text-center bg-car1 pb-2">
                         <div class="card-body">
                             <h3 class="card-title">Desarrollo de APIs con SpringBoot</h3>
-                            <p>Tengo los conocimientos  para poder desarrollar APIs con SpringBoot.</p>
+                            <p>Conocimientos  para poder desarrollar APIs con SpringBoot.</p>
                             <button class="btn bg-primary text-white">Certificado en la seccion Cursos</button>
                         </div>
                     </div>
@@ -142,7 +142,7 @@
                     <div class="card text-white text-center bg-car2 pb-2">
                         <div class="card-body">
                             <h3 class="card-title">Desarrollo FrontEnd</h3>
-                            <p>Se usar tecnologias como HTML, CSS, JavaScript, Bootstrap para poder realizar un desarrollo de FrontEnd.</p>
+                            <p>Conocimientos en  tecnologias como HTML, CSS, JavaScript, Bootstrap para poder realizar un desarrollo de FrontEnd.</p>
                             <button class="btn bg-primary text-white">Certificado en la seccion Cursos</button>
                         </div>
                     </div>
@@ -151,7 +151,7 @@
                     <div class="card text-white text-center bg-car3 pb-2">
                         <div class="card-body">
                             <h3 class="card-title">Desarrollo BackEnd Java</h3>
-                            <p>Se utilizar  tecnologias como MySQL, Java SpringBoot para poder llevar acabo un BackEnd</p>
+                            <p>Conocimientos tecnologias como MySQL, Java SpringBoot para poder llevar acabo un BackEnd</p>
                             <button class="btn bg-primary text-white">Certificado en la seccion Cursos</button>
                         </div>
                     </div>
@@ -179,7 +179,7 @@
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">Fundamentos de programación</h5>
-                            <p>En este curso aprendí la lógica de programación, sus estructuras y cómo funciona un programa.</p>
+                            <p> Aprendizaje en lógica de programación, sus estructuras y cómo funciona un programa.</p>
                             <a target="_blank" href="https://drive.google.com/file/d/1oAj5bAXvIlDVcVUDvMRTAmARrrus93N1/view?usp=drive_link" class="btn btn-primary">Certificado aquí</a>
                         </div>
                     </div>                 
@@ -192,7 +192,7 @@
                         </div>
                         <div class="card-body">
                           <h5 class="card-title">Diplomatura en lenguaje Java</h5>
-                          <p>En este curso aprendí la lógica de programación, sus estructuras y cómo funciona un programa.</p>
+                          <p>Aprendizaje de todo lo que abarca este lenguaje y como desenvolverme con exito en el.</p>
                           <a target="_blank" href="https://drive.google.com/file/d/1mkF5PPTsRqqN-FfIIoneEg9P3KI5n1nI/view?usp=drive_link" class="btn btn-primary">Certificado aquí</a>
                       </div>
                     </div>                 
@@ -218,7 +218,7 @@
                         </div>
                         <div class="card-body">
                           <h5 class="card-title">Desarrollo de APIs con SpringBoot</h5>
-                          <p>Reforce mis habilidades con Java y Aprendi el uso de Spring y el desarrollo de APIs con SpringBoot</p>
+                          <p>Reforce mis habilidades, Aprendi el uso de Spring y el desarrollo de APIs con SpringBoot</p>
                           <a target="_blank" href="https://drive.google.com/file/d/1zl5uMG_gBEzKb_vGmNgMIQmTUqL-QvGU/view?usp=drive_link" class="btn btn-primary">Certificado aqui</a>
                       </div>
                     </div>                 
@@ -238,8 +238,8 @@
                             <img src="./imagenes/Captura de pantalla (12).png" alt="">
                         </div>
                         <div class="card-body d-flex flex-column justify-content-between">
-                          <h5 class="card-title">Curso Ingles Begginer</h5>
-                          <p>Aprendi lo basico del lenguaje y como desenvolverme bien</p>
+                          <h5 class="card-title">Curso Ingles Beginner</h5>
+                          <p>Aprendi lo basico del lenguaje.</p>
                           <a target="_blank" href="https://drive.google.com/file/d/1nveFedFgoD1le6FHn3Kj6vlGMlHwLQuI/view?usp=drive_link" class="btn btn-primary">Certificado aqui</a>
                       </div>
                     </div>                 
@@ -251,8 +251,8 @@
                             <img src="./imagenes/Captura de pantalla (13).png" alt="">
                         </div>
                         <div class="card-body d-flex flex-column justify-content-between">
-                          <h5 class="card-title"> Curso Ingles Begginner Speaking</h5>
-                          <p>En este curso reforce mis conocimientos previos y aprendi mas acerca de su pronunciacion.</p>
+                          <h5 class="card-title"> Curso Ingles Beginner Speaking</h5>
+                          <p> Reforce mis conocimientos previos y su correcta pronunciacion.</p>
                           <a target="_blank" href="https://drive.google.com/file/d/1wHAvVel6JXoOSUQnaNm7Lo9bAxEPLPyh/view?usp=drive_link" class="btn btn-primary">Certificado aqui</a>
                       </div>
                     </div>                 
@@ -264,8 +264,8 @@
                             <img src="./imagenes/Captura de pantalla (11).png" alt="">
                         </div>
                         <div class="card-body d-flex flex-column justify-content-between">
-                          <h5 class="card-title">Curso Ingles PreIntermediate</h5>
-                          <p>En este curso vimos contenido mas avanzados y pudimos desarrollar  nuevo vocabulario.</p>
+                          <h5 class="card-title">Curso Ingles Pre-Intermediate</h5>
+                          <p>Desarrollo de contenido avanzado escrito y verbal.</p>
                           <a target="_blank" href="https://drive.google.com/file/d/1aqEZt6_9Cy00u9lYjLY76hMM5f6FWXgu/view?usp=drive_link" class="btn btn-primary">Certificado aqui</a>
                       </div>
                     </div>                 
@@ -279,7 +279,7 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <h2>Acerca de mi</h2>
-                    <p>Hola mi nombre es Joaquin Brassinne tengo 21 años y soy de Argentina vivo en un pueblo rodeado de un hermoso lago. Actualmente estoy realizando la carrera de Desarrollo de Software en la Escuela Superior de Comercio Rio Tercero. Empece a introducirme en la programacion en 2021 y de ahi no e parado de profundizar e indagar en este fabuloso y extenso mundo. </p>
+                    <p>Hola mi nombre es <span style="color: crimson;">Joaquin Brassinne</span> tengo 21 años soy de Argentina, vivo en una ciudad en el interior de Cordoba rodeado de un hermoso lago. Actualmente estoy realizando la carrera de <span style="color: crimson;">Desarrollo de Software</span> en la Escuela Superior de Comercio Rio Tercero. Comence a introducirme en la programacion desde el año 2021. Desde entonces he continuado estudiando, indagando  y profundizando en este fabuloso y extenso mundo.</p>
                 </div>
                 <div class="text-center" id="yo">
                     <img src="./imagenes/WhatsApp Image 2024-03-10 at 18.43.53.jpeg" alt="">
