--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="carousel-item">
                     <img src="./imagenes/code-1076536_1920.jpg" class="d-block w-100" alt="">
                     <div class="carousel-caption">
-                        <h5 id="proyectos">Proyecto FullStack en Java</h5>
+                        <h5 id="proyectos">FullStack Java</h5>
                         <p>Para ir al video pulsar el boton</p>
                         <p><a target="_blank" href="https://www.youtube.com/watch?v=c6iuPgJYi10" class="btn btn-primary mt-3">Ver mas</a></p>
                     </div>
