Otro proyecto mas subido!

--- a/index.html
+++ b/index.html
@@ -471,6 +471,25 @@
               </div>
             </div>
           </div>
+          <div class="col-12 col-md-12 col-lg-4 mb-3">
+            <div class="card text-white text-center bg-car4 pb-2">
+              <div class="card-body">
+                <h3 class="card-title">
+                  Desarrollo de API Rest sobre los Red Hot 
+                </h3>
+                <p>
+                  Desarrolle todos sus albumes con sus musicas [Puse imagenes de los endpoints, y de la BD]
+                </p>
+                <button class="btn bg-primary text-white">
+                  <a
+                    target="_blank"
+                    href="https://github.com/joaquinBrassinne/redHotChiliPeppers_API/tree/main/Imagenes"
+                    >Ver</a
+                  >
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
