Resolucion de imagenes

--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                   Desarrollo de API Rest sobre los Red Hot 
                 </h3>
                 <p>
-                  Desarrolle todos sus albumes con sus musicas [Puse imagenes de los endpoints, y de la BD]
+                  Desarrolle todos sus albumes con sus musicas [Puse imagenes de los endpoints]
                 </p>
                 <button class="btn bg-primary text-white">
                   <a
